# Constrictor

./: .constrictor_ignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: install-agent-skill.sh
src/constrictor/agent/: skill.py
src/constrictor/analysis/: base.py  calls.py  classes.py  diff.py  django.py  fastapi.py  flask.py  http_clients.py  imports.py  js_calls.py  js_http.py  js_imports.py  js_utils.py  sqlalchemy.py  topology.py  type_annotations.py
src/constrictor/cli/: context.py  cycles.py  diff_impact.py  impact.py  main.py  paths.py  search.py  serve.py  unused.py  watch.py
src/constrictor/core/: cache.py  ignore.py  js_parser.py  models.py  orchestrator.py  parser.py  scanner.py
src/constrictor/export/: format_output.py  (+3 more)
tests/: test_cache.py  test_calls.py  test_classes.py  test_cli.py  test_decorators.py  test_django.py  test_edge_cases.py  test_error_handling.py  test_fastapi.py  test_flask.py  test_graph_builder.py  test_http_clients.py  test_id_factory.py  test_ignore.py  test_imports.py  test_incremental.py  test_integration.py  test_js_calls.py  test_js_http.py  test_js_imports.py  test_json_export.py  test_mcp_server.py  test_neo4j_export.py  test_orchestrator.py  test_parser.py  test_performance.py  test_query_engine.py  test_scanner.py  test_skill_generator.py  test_sqlalchemy.py  test_topology.py  test_type_annotations.py  test_web_app.py
(+62 files in other folders)
