[project]
name = "constrictor"
version = "0.1.0"
description = "Static dependency and blast-radius analyzer for Python codebases"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "typer>=0.9",
    "rich>=13.0",
    "watchfiles>=0.20",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.scripts]
constrictor = "constrictor.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
js = [
    "tree-sitter>=0.25",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-typescript>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constrictor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
